Fix text overlapping titlebar

--- a/tgui/src/components/titlebar.styl
+++ b/tgui/src/components/titlebar.styl
@@ -13,6 +13,7 @@ $titleButton
 
 header.titlebar
   position: fixed;
+  z-index: 1
   top: 0;
   left: 0;
   width: 100%;
